--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -2659,6 +2659,14 @@
     margin-bottom: 20px;
     height: calc(100% - 20px);
   }
+
+  &-card {
+    margin-bottom: 32px;
+
+    @media (max-width: 1366px) {
+      margin-bottom: 20px;
+    }
+  }
   
   &__mobile {
     display: none;
@@ -2831,7 +2839,7 @@
 
     @media (max-width: 1140px) {
       display: none;
-    }
+    }    
 
     &__desk {
       margin-bottom: 0;
@@ -3108,6 +3116,10 @@
     &-content {
       display: flex;
       flex-direction: column;
+      position: relative;
+      @media (max-width: 360px) {
+        max-width: 92vw;      
+      }  
     }
 
     img {
@@ -4053,7 +4065,7 @@
 .section-reviews {
   overflow: hidden;
 
-  @media (max-width: 599px) {
+  @media (max-width: 599px) {    
     background-color: $bgc;
 
     &__blue-light {
@@ -4061,6 +4073,7 @@
     }
   }
 }
+
 .reviews {
   &-card {
     background: #FFF;
@@ -4457,6 +4470,123 @@
         @include ls(0.12);        
         line-height: 133.333%;        
       }
+    }
+  }
+}
+
+.video-reviews {
+
+  &-card {
+    display: block;
+    border-radius: 12px;
+    background-color: #fff;
+    box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+    overflow: hidden;
+    transition: background-color 0.3s;
+
+    @media (max-width: 768px) {
+      border-radius: 6px;
+      margin-bottom: 44px;
+      box-shadow: 0px 2px 9px 0px rgba(43, 47, 137, 0.15);
+    }
+
+    &:hover {
+      background-color: $bgc;
+
+      .video-reviews-play {
+        opacity: 1;
+      }
+    }
+  }
+
+  &-preview {
+    aspect-ratio: 1.65;
+    position: relative;
+    background-color: #D9D9D9;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+  }
+
+  &-play {
+    width: 64px;
+    height: 64px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-50%, 50%);
+    opacity: 0;
+    transition: opacity 0.3s;
+
+    @media (max-width: 992px) {
+      opacity: 1;
+      width: 44px;
+      height: 44px;
+    }
+  }
+
+  &-info {
+    padding: 24px;
+
+    @media (max-width: 480px) {
+      padding: 16px 12px;
+    }
+  }
+
+  &-author {
+    @include fz(20);
+    line-height: 140%;
+
+    @media (max-width: 480px) {
+      @include fz(14);
+    }
+  }
+
+  &-country {
+    @include fz(20);    
+    font-weight: 500;
+    line-height: 140%;
+    padding-bottom: 16px;
+
+    @media (max-width: 480px) {
+      @include fz(14);
+      padding-bottom: 8px;
+    }
+  }
+
+  &-secvice {
+    color: $gray_dark;
+    @include fz(16);
+    @include ls(0.16);    
+    line-height: 156.25%;
+    border-top: 2px solid $bgc;
+    padding-top: 16px;
+
+    @media (max-width: 480px) {
+      line-height: 133.333%;
+      @include ls(0.12);     
+      @include fz(12);
+      padding-top: 8px;
+    }
+
+    p {
+      margin-bottom: 0;
+    }  
+  }
+
+  &-wrapper {
+    max-width: 80vw;
+    max-height: 80vh;
+    aspect-ratio: 0.547;
+    width: 100%;
+    height: 100%;   
+
+    iframe {
+      width: 100%;
+      height: 100%;
     }
   }
 }
@@ -6037,10 +6167,43 @@
 }
 
 .mfp-popup {
-  max-width: 560px;
+  // max-width: 560px;
   margin-left: auto;
   margin-right: auto;
   position: relative;
+  &.popup-appointment, &.popup-success {
+    max-width: 560px;
+  }
+
+  &.popup-video-reviews {
+    max-width: 80vw;   
+    max-height: 80vh;
+    aspect-ratio: 0.547;   
+
+    button.mfp-close {
+      width: 44px;
+      height: 44px;
+      font-size: 0;
+      background-color: $primary;
+      border-radius: 50%;
+      transform: translate(100%, -100%);
+      opacity: 1;
+
+      @media (max-width: 599px) {
+        transform: translate(0%, -120%);       
+      }
+
+      &::after {
+        position: absolute;
+        top: 50%; 
+        right: 50%;
+        transform: translate(50%, -50%);
+        width: 32px;
+        height: 32px;    
+        content: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1833_5135)'%3E%3Cpath d='M8 7.51465L24.9706 24.4852' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M8 24.4854L24.9706 7.51479' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1833_5135'%3E%3Crect width='32' height='32' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+      }
+    }
+  }
   &-inner {    
     .feedback-wrapper {
       background-color: $bgc-pink;     
@@ -6158,7 +6321,9 @@
     position: absolute;
     height: 100%;      
     top: 0;
-    left: 0;      
+    bottom: 0;
+    left: 0;
+    right: 0;    
      
     img {
       width: 100%;
@@ -7566,6 +7731,17 @@
 }
 
 .rating {
+  // &-list {
+  //   padding-bottom: 48px;
+
+  //   @media (max-width: 1280px) {
+  //     padding-bottom: 38px;
+  //   }
+
+  //   @media (max-width: 960px) {
+  //     padding-bottom: 30px;
+  //   }
+  // }
   &-card {
     background-color: #fff;
     border-radius: 12px;
@@ -7705,17 +7881,19 @@
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
-  margin-bottom: 32px;
-  height: calc(100% - 32px);
+  // margin-bottom: 32px;
+  // height: calc(100% - 32px);
+  height: 100%;
 
-  @media (max-width: 1023px) {
-    margin-bottom: 32px;
-    height: calc(100% - 32px);
-  }
+  // @media (max-width: 1023px) {
+  //   margin-bottom: 32px;
+  //   height: calc(100% - 32px);
+  // }
 
   @media (max-width: 768px) {
     border-radius: 6px;
     box-shadow: 0px 2px 9px 0px rgba(43, 47, 137, 0.15);
+    margin-bottom: 32px;
   }
 
   &-before {
@@ -7827,5 +8005,128 @@
         color: $bgc-pink;
       }
     }
+  }
+}
+
+
+// foreign banner
+
+.foreign-banner {
+  @media (max-width: 1140px) {
+    min-height: 400px;
+  }
+
+  @media (max-width: 960px) {
+    aspect-ratio: 0.96;
+    align-items: flex-start;
+    padding-top: 150px;    
+  }
+
+  @media (max-width: 768px) {     
+    padding-top: 100px;
+    aspect-ratio: 0.9;
+  }
+
+  @media (max-width: 599px) {     
+    padding-top: 46px;
+  }
+
+  @media (max-width: 490px) {
+    padding-top: 36px;
+    aspect-ratio: 0.78;      
+  }
+
+  @media (max-width: 360px) {
+    min-height: 460px;
+  }
+
+  &-bg {
+    position: absolute;
+    height: 100%;      
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;    
+     
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center left;
+    }
+  }
+
+  &-photo {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 67%;
+
+    @media (max-width: 1680px) {
+      width: 60%;
+    }
+
+    @media (max-width: 1366px) {
+      width: 69%;
+    }
+
+    @media (max-width: 960px) {
+      height: 58%;
+      width: 100%;
+      top: unset;
+      bottom: 0;
+    }
+
+    @media (max-width: 599px) {
+      &__article {
+        height: 38%;
+      }
+    }
+
+
+    img {
+      mask-image: linear-gradient(to left, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+
+      @media (max-width: 1680px) {
+        object-position: center;
+      }
+      
+      @media (max-width: 960px) {
+        mask-image: linear-gradient(to top, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);         
+        object-position: center;
+      }
+    }
+  }
+
+  &-content {
+    position: relative;
+    max-width: 26%;
+
+    @media (max-width: 1680px) {
+      max-width: 32%;
+    }
+
+    @media (max-width: 960px) {
+      max-width: 100%;
+    }
+  }
+
+  &-title {
+    @include fz(32);
+    @include ls(0.96);
+    color: #FFF;   
+    font-weight: 600;
+    line-height: 145.938%;    
+    text-transform: uppercase;
+    margin-bottom: 32px;
+  }
+
+  &-list {
+    margin-bottom: 32px;
   }
 }
